openshift/dc-backend.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: null
  generation: 1
  labels:
    app: backend
  name: backend
spec:
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    name: backend
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        app: backend
        name: backend
    spec:
      containers:
      - env:
        - name: APP_MODULE
          value: api:app
        - name: MONGODB_USER
          valueFrom:
            configMapKeyRef:
              key: MONGODB_USER
              name: database-params
        - name: MONGODB_PASSWORD
          valueFrom:
            configMapKeyRef:
              key: MONGODB_PASSWORD
              name: database-params
        - name: MONGODB_DATABASE
          valueFrom:
            configMapKeyRef:
              key: MONGODB_DATABASE
              name: database-params
        image: 172.30.16.196:5000/catcatgo/backend@sha256:a4b3b796548c832b57c3fe794a17241159868c696fc84c4cec73548287565750
        imagePullPolicy: IfNotPresent
        name: backend
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/v1.0/search/x
            port: 8080
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - backend
      from:
        kind: ImageStreamTag
        name: backend:latest
        namespace: catcatgo
    type: ImageChange
  - type: ConfigChange
status:
  availableReplicas: 0
  latestVersion: 0
  observedGeneration: 0
  replicas: 0
  unavailableReplicas: 0
  updatedReplicas: 0
