openshift/dc-database.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/scc: anyuid
  creationTimestamp: null
  generation: 1
  labels:
    app: database
    version: v1
  name: database
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    name: database
    version: v1
  strategy:
    activeDeadlineSeconds: 21600
    recreateParams:
      timeoutSeconds: 600
    resources: {}
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: database
        name: database
        version: v1
    spec:
      containers:
      - env:
        - name: MONGODB_USER
          valueFrom:
            configMapKeyRef:
              key: MONGODB_USER
              name: database-params
        - name: MONGODB_PASSWORD
          valueFrom:
            configMapKeyRef:
              key: MONGODB_PASSWORD
              name: database-params
        - name: MONGODB_DATABASE
          valueFrom:
            configMapKeyRef:
              key: MONGODB_DATABASE
              name: database-params
        - name: MONGODB_ADMIN_PASSWORD
          valueFrom:
            configMapKeyRef:
              key: MONGODB_ADMIN_PASSWORD
              name: database-params
        image: centos/mongodb-32-centos7:latest
        imagePullPolicy: IfNotPresent
        name: database
        ports:
        - containerPort: 27017
          protocol: TCP
          name: tcp-mongo
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/mongodb/data
          name: volume-35vdh
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsUser: 0
      terminationGracePeriodSeconds: 30
      volumes:
      - name: volume-35vdh
        persistentVolumeClaim:
          claimName: mongodb
  test: false
  triggers:
  - type: ConfigChange
status:
  availableReplicas: 0
  latestVersion: 0
  observedGeneration: 0
  replicas: 0
  unavailableReplicas: 0
  updatedReplicas: 0
