openshift/dc-ui-v2.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: null
  generation: 1
  labels:
    app: ui
    version: v2
  name: ui-v2
spec:
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    app: ui
    version: v2
    deploymentconfig: ui
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        app: ui
        version: v2
        deploymentconfig: ui
    spec:
      containers:
      - image: 172.30.16.196:5000/catcatgo/ui:v2
        imagePullPolicy: Always
        name: ui
        ports:
        - containerPort: 8080
          protocol: TCP
          name: http-ui
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - ui
      from:
        kind: ImageStreamTag
        name: ui:v2
        namespace: catcatgo
    type: ImageChange
  - type: ConfigChange
status:
  availableReplicas: 0
  latestVersion: 0
  observedGeneration: 0
  replicas: 0
  unavailableReplicas: 0
  updatedReplicas: 0
