openshift/svc-backend.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: backend
  namespace: catcatgo
spec:
  ports:
    - name: web
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    name: backend
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
