openshift/svc-database.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: null
  labels:
    app: database
  name: database
spec:
  ports:
  - name: tcp-mongo
    port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: database
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
