openshift/svc-hawkular-grafana-datasou.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: null
  labels:
    app: hawkular-grafana
  name: hawkular-grafana-datasou
spec:
  ports:
  - name: 3000-tcp
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    deploymentconfig: hawkular-grafana-datasou
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
