openshift/svc-ui.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: null
  labels:
    app: ui
  name: ui
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: ui
    deploymentconfig: ui
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
