openshift/route-api.yml
apiVersion: v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: backend
  name: v1-api
spec:
  host: api-catcatgo.54.175.151.183.xip.io
  path: /api/v1.0/
  port:
    targetPort: web
  to:
    kind: Service
    name: backend
    weight: 100
  wildcardPolicy: None
