openshift/route-grafana.yml
apiVersion: v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  creationTimestamp: null
  name: grafana
spec:
  host: grafana-catcatgo.e8ca.engint.openshiftapps.com
  port:
    targetPort: 3000-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: hawkular-grafana-datasou
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: 2018-04-28T14:05:13Z
      status: "True"
      type: Admitted
    host: grafana-catcatgo.e8ca.engint.openshiftapps.com
    routerName: router
    wildcardPolicy: None
